<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:id="@+id/playBtn"
        android:layout_width="203dp"
        android:layout_height="69dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="serif"
        android:text="@string/play_game"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/optionBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/optionBtn"
        android:layout_width="203dp"
        android:layout_height="69dp"
        android:layout_marginTop="275dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="serif"
        android:text="@string/options"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/helpBtn"
        android:layout_width="203dp"
        android:layout_height="69dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="275dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="19dp"
        android:fontFamily="serif"
        android:text="@string/help"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/optionBtn"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:alpha="1.0"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kobe_mural" />

</androidx.constraintlayout.widget.ConstraintLayout>