<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Options"
    tools:showIn="@layout/activity_options">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="774dp"
        android:layout_height="437dp"
        android:alpha="0.75"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/kobe_mural" />

    <Spinner
        android:id="@+id/number_of_mines_dd"
        android:layout_width="307dp"
        android:layout_height="32dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="126dp"
        android:backgroundTint="#80FFFFFF"
        android:foregroundTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/layoutDropDown" />

    <Spinner
        android:id="@+id/layoutDropDown"
        android:layout_width="307dp"
        android:layout_height="32dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="300dp"
        android:backgroundTint="#80FFFFFF"
        android:foregroundTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="57dp"
        android:text="@string/number_of_hidden_images"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:text="@string/board_row_x_column"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/layoutDropDown"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="149dp"
        android:layout_height="59dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="45dp"
        android:layout_marginBottom="81dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/number_of_mines_dd"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>